lab1/Test/L1-A-12-74.output
Error Type A at Line 5
Error Type B at Line 19
Error Type A at Line 26
Error Type A at Line 28
Error Type A at Line 36
Error Type A at Line 37
